[gd_scene load_steps=5 format=2]

[ext_resource path="res://Rooms/AbstractRoom/Room.gd" type="Script" id=1]
[ext_resource path="res://Tilesets/DungeonTileSet.tscn" type="PackedScene" id=2]
[ext_resource path="res://World Objects/DarknessBlendLayer.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 8 )

[node name="Room" type="Node2D"]
z_index = -1
script = ExtResource( 1 )
snapPositionTop = Vector2( 0, -224 )
snapPositionBottom = Vector2( 0, 224 )

[node name="Lights" type="Node2D" parent="."]

[node name="Enemies" type="YSort" parent="."]
z_index = 10

[node name="Tiles" type="Node2D" parent="."]

[node name="FloorTiles" parent="Tiles" instance=ExtResource( 2 )]

[node name="Sprite" parent="Tiles/FloorTiles" index="0"]
collision_layer = 0
collision_mask = 0

[node name="OverlayTiles" parent="Tiles" instance=ExtResource( 2 )]

[node name="AccessoryTiles" parent="Tiles" instance=ExtResource( 2 )]

[node name="NextRoomPortal" type="Area2D" parent="."]
position = Vector2( 0, -72 )
z_index = 10
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape2D" parent="NextRoomPortal"]
shape = SubResource( 1 )

[node name="PreviousRoomPortal" type="Area2D" parent="."]
position = Vector2( 0, 72 )
z_index = 10
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape2D" parent="PreviousRoomPortal"]
shape = SubResource( 1 )
disabled = true

[node name="SnappingPointTop" type="Position2D" parent="."]
position = Vector2( 0, -224 )

[node name="SnappingPointBottom" type="Position2D" parent="."]
position = Vector2( 0, 224 )

[node name="DarknessBlendLayer" parent="." instance=ExtResource( 3 )]
color = Color( 0.47451, 0.415686, 0.356863, 1 )
[connection signal="tree_entered" from="." to="." method="_on_Room_tree_entered"]
[connection signal="body_entered" from="NextRoomPortal" to="." method="_on_NextRoomPortal_body_entered"]
[connection signal="body_entered" from="PreviousRoomPortal" to="." method="_on_PreviousRoomPortal_body_entered"]

[editable path="Tiles/FloorTiles"]

[editable path="Tiles/OverlayTiles"]

[editable path="Tiles/AccessoryTiles"]
